# extractor_pdf_polizas

./: .env.example  .gitignore  alembic.ini  pyproject.toml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2-extraction-errors.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_baseline.py  002_evaluation_columns.py  003_validation_warnings.py  004_batch_jobs.py  005_corrections.py  006_financial_breakdown_columns.py
policy_extractor/: __init__.py  cli.py  cli_helpers.py  config.py  evaluation.py  export.py  insurer_config.json
policy_extractor/api/: __init__.py  upload.py
policy_extractor/extraction/: __init__.py  client.py  prompt.py  rules.py  schema_builder.py  validation.py  verification.py
policy_extractor/ingestion/: cache.py  (+3 more)
tests/: conftest.py  create_fixtures.py  test_api.py  test_auto_eval.py  test_batch_fixture.py  test_cli.py  test_coverage_matrix.py  test_evaluation.py  test_export.py  test_extraction.py  test_ingestion.py  test_ingestion_contracts.py  test_migrations.py  test_models.py  test_ocr_cache.py  test_prompt.py  test_regression.py  test_regression_helpers.py  test_reports.py  test_schemas.py  test_storage_writer.py  test_ui_dashboard.py  test_ui_infra.py  test_ui_integration.py  test_ui_pages.py  test_ui_review.py  test_ui_upload.py  test_upload.py  test_validation.py
(+198 files in other folders)
